[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "flpinfo"
description = "CLI utility for examining FL Studio files"
authors = [{ name = "demberto", email = "demberto@proton.me" }]
requires-python = ">=3.7"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["pyflp >=2.0.0", "rich >=13.3.3", "typer >=0.7.0"]
dynamic = ["version"]

[project.scripts]
flpinfo = "flpinfo.__main__:app"
