[metadata]
name = flpinfo
version = file: VERSION
description = Prints basic information about an FL Studio project file (.flp)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/FLPInfo
author = demberto
author_email = demberto@protonmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/demberto/FLPInfo
    Documentation = https://flpinfo.rtfd.io
    Changelog = https://github.com/demberto/FLPInfo/blob/master/CHANGELOG.md
    Bug Tracker = https://github.com/demberto/FLPInfo/issues
    TODO = https://github.com/demberto/FLPInspect/blob/master/TODO.md

[options]
packages = find:
install_requires =
    pyflp>=1.0.1
python_requires = >=3.6
package_dir =
    = .

[options.entry_points]
console_scripts =
    flpinfo = flpinfo.__main__:main
